# x86-JuliaSet

./: CMakeLists.txt  README.md  julia_set.asm  julia_set.h  main.c
